<resources>
    <string name="app_name">MimoSale</string>
    <string name="ok">Ok</string>
    <string name="success">Success</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="add_post">Post</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="preferences">Preferences</string>
    <string-array name="language">
        <item>English</item>
        <item>Japneese</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="furniture">Furniture</string>
    <string name="all">All</string>
    <string name="shop_sale">Shop/Sale</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="furnitures">Furniture</string>
    <string name="double_bed_sigma">Double Bed Sigma</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up_msg">Don\'t have an account? Register Here</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_instagram">Login With Instagram</string>
    <string name="register_here">Register Now</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email_id">Email id</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="passsword">Password</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="go_premium">Go Premium</string>
    <string name="messages">Messages</string>
    <string name="transaction_history">Transaction History</string>
    <string name="followers">Followers</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="log_out">Sign out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_registered_email_id">Enter Registered Email ID</string>
    <string name="submit">Submit</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_images">Shop Images</string>
    <string name="upload">Upload</string>
    <string name="can_not_share_more_than_five_images">Cannot Share More Than Five Images</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select">Select</string>
    <string name="please_wait">Please Wait. . .</string>
    <string name="you_can_not_select_more_two_videos">You cannot select more than 2 files</string>
    <string name="unable_to_load_selected_video">Unable to load selected video</string>
    <string name="not_able_to_select_video">Not Able to select video</string>
    <string name="retrofit_failed_error">Error</string>
    <string name="failed_create_event">Failed</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="address_line1">Address Line1</string>
    <string name="address_line2">Building name or House/flat No</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="hash_tag">Hash Tag</string>
    <string name="addurl">Add Url (example- www.xyz.com)</string>
    <string name="preview">Preview</string>
    <string name="upgrade_to_premimum">Upgrade to Premimum</string>
    <string name="price">Price</string>
    <string name="tag">Tag</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="website">Website</string>
    <string name="shop_posting_preview">ShopPosting Preview</string>
    <string name="shop_posting">Shop Posting</string>
    <string name="billing__address">Billing Address</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="add_preferences">Add Preferences</string>
    <string name="edit_preferences">Edit Preferences</string>
    <string name="my_preferences">My Preferences</string>
    <string name="view_all">View All</string>
    <string name="bed">Bed</string>
    <string name="title">Title</string>
    <string name="post"><![CDATA[Posts (Shop & Sale,Products)]]></string>
    <string name="my_post"><![CDATA[My Posts (Shop & Sale,Products)]]></string>
    <string name="search_by_pincode">Search By Pincode</string>
    <string name="short_description">Short Description (Max. 120 characters)</string>
    <string name="add_discount">Add discount coupon</string>
    <string name="min_discount">Min Discount</string>
    <string name="max_discount">Max Discount</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="do_you_want_to_go_premimum">Do you want to go premium?</string>
    <string name="skip">Skip</string>
    <string name="go_back">Go Back</string>
    <string name="product_name">Product Name</string>
    <string name="price_">Price</string>
    <string name="images">Images</string>
    <string name="add_products">Add Products</string>
    <string name="shop_and_sale"><![CDATA[Shop & Sale]]></string>
    <string name="select_posting">Select Posting</string>
    <string name="search_picode">Search Pincode</string>
    <string name="sale_posting">Sale Posting</string>
    <string name="product_details">Product Details</string>
    <string name="gionee_shop">Gionee Shop</string>
    <string name="shop">Shop</string>
    <string name="saleposting_preview">Sale Posting Preview</string>
    <string name="posting_details">Posting Details</string>
    <string name="my_posting">My Posting</string>
    <string name="product_posting">Product Posting</string>
    <string name="add_new">Add New</string>
    <string name="add">Add</string>
    <string name="navigate_now">Navigate Now</string>
    <string name="category_choose">Category: Cateogry 1</string>
    <string name="tag_line">Tag: This is tag line</string>
    <string name="location_califirnia">Location: California</string>
    <string name="contact_no">Contact: 9876543210</string>
    <string name="website_site">Website: www.gionee.com</string>
    <string name="serach_by_pincode">Search by pincode</string>
    <string name="enter_mynually">Enter Manually</string>
    <string name="preferences_updated">Preferences successfully added</string>
    <string name="name">Name</string>
    <string name="enter_email_id">Please Enter Email Id</string>
    <string name="retry">Retry</string>
    <string name="email_error">Invalid Email</string>
    <string name="password_error">Please Enter Password</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_profile_pic_title">Add Profile Photo</string>
    <string name="enter_first_name">Please Enter First Name</string>
    <string name="first_name_error">Invalid Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="last_name_error">Invalid Last Name</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="mobile_error">Invalid Mobile Number</string>
    <string name="enter_confirm_pass">Enter Confirm Password</string>
    <string name="c_password_error">Password Does not matched</string>
    <string name="user_already_registered">User Already Registered</string>
    <string name="loading">Loading...</string>
    <string name="delete_msg">Are you sure? You want to delete this preference?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nothing_to_update">Nothing to Update!</string>
    <string name="no_update_msg">You have not made any changes to update prefrences.</string>
    <string name="select_category">Select Category</string>
    <string name="want_to_delete">You want to delete this file?</string>
    <string name="delete">Yes,delete it!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="shop_desc_error">Please Enter Shop Description</string>
    <string name="min_price_error">Set Minimum Price</string>
    <string name="max_price_error">Set Maximum Price</string>
    <string name="min_price_greater">Minimum Price must not be greater than maximum price</string>
    <string name="max_price_smaller">Maximum price must not be smaller than minimum price</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_complete_address">Enter Complete Address</string>
    <string name="enter_hash_tag">Enter Hash Tag</string>
    <string name="save">Save</string>
    <string name="shop_posting_success">Shop Created Successfully</string>
    <string name="login_waning">Login</string>
    <string name="please_login">Please Login to continue</string>
    <string name="login_now">Login Now!</string>
    <string name="premimum">Premium</string>
    <string name="add_preference">Add More</string>
    <string name="shop_details">Shop Details</string>
    <string name="shop_discount">Shop Discount</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="address_details">Address Details</string>
    <string name="other_details">Other Details</string>
    <string name="discount">Discount: </string>
    <string name="lorem_epsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="highlight">Highlight</string>
    <string name="info">Info</string>
    <string name="please_select_atleast_two_images">Please Select atleast Two images</string>
    <string name="min_discount_error">Minimum discount must not be greater than Maximum discount</string>
    <string name="max_dis_error">Maximum discount must not be less than Minimum discount</string>
    <string name="enter_start_date">Please Enter Start Date</string>
    <string name="enter_end_date">Please Enter End Date</string>
    <string name="end_date_must_be_greater">End Date Must be Greater Than Start Date</string>
    <string name="not_a_valid_number">Not Valid Number</string>
    <string name="please_select_pref_category">Please Select Preference Category</string>
    <string name="address_info">Address Information</string>
    <string name="discount_text">Discount</string>
    <string name="more_info">More Information</string>
    <string name="not_avail">Not Available</string>
    <string name="price_range">Price Range</string>
    <string name="sale_duration">Sale Duration</string>
</resources>