<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_posting"
        android:padding="10dp"
        android:textSize="17dp"
        android:textStyle="bold"
        />

    <RadioButton
        android:id="@+id/rb_shop_posting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_posting"
        android:padding="10dp"
        />

    <RadioButton
        android:id="@+id/rb_sale_posting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale_posting"
        android:padding="10dp"
        />
    <RadioButton
        android:id="@+id/rb_product_posting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_posting"
        android:padding="10dp"
        />
</RadioGroup>


</LinearLayout>

</android.support.v7.widget.CardView>