<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textSize="17dp"
            android:background="@color/back_silver"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/enter_registered_email_id"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:textSize="14dp"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button_shape_black"
            android:text="@string/submit"
            android:textColor="@color/white"
            />
    </LinearLayout>

</android.support.v7.widget.CardView>