<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/change_password"
         android:background="@color/back_silver"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="13dp"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionNext"

                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:textSize="14dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionNext"

                />

        </android.support.design.widget.TextInputLayout> <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass"
            android:textSize="14dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone"

            />

    </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@drawable/button_shape_black"
            />
    </LinearLayout>


</LinearLayout>
</RelativeLayout>