<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:padding="10dp"
        android:gravity="center"
        android:text="@string/do_you_want_to_go_premimum"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
<Button
    android:id="@+id/skip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/button_shape_red"
    android:layout_marginRight="20dp"
    android:text="@string/skip"
    />

        <Button
            android:id="@+id/btn_submit_dialog"
            android:layout_toRightOf="@+id/skip"
            android:background="@drawable/button_shape_black"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
</RelativeLayout>