<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white_smoke"
                android:fontFamily="@font/georgia_bold"
                android:gravity="center"
                android:padding="@dimen/padding_10"
                android:text="@string/more_info"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/georgia_bold"
                android:gravity="center"
                android:padding="@dimen/five_dp"
                android:text="@string/price_range"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_price_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_margin="5dp"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/georgia_bold"
                android:gravity="center"
                android:padding="@dimen/five_dp"
                android:text="@string/discount_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/not_avail"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_margin="5dp"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/georgia_bold"
                android:gravity="center"
                android:padding="@dimen/five_dp"
                android:text="@string/sale_duration"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_sale_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_margin="5dp"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/georgia_bold"
                android:gravity="center"
                android:padding="@dimen/five_dp"
                android:text="@string/website"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_website_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_margin="5dp"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/georgia_bold"
                android:gravity="center"
                android:padding="@dimen/five_dp"
                android:text="@string/address_info"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_address_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray"
                android:layout_margin="5dp"></View>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounnded_red"
                android:layout_margin="@dimen/padding_10"
                android:text="@string/ok"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>