<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <com.github.siyamed.shapeimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:minHeight="150dp"
            android:src="@drawable/prefences1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.4"
                android:padding="5dp"
                android:text="Gionee Furniture" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.6"
                android:background="@drawable/button_red_holo"

                android:text="@string/upgrade_to_premimum"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:padding="5dp"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. " />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#E9E9E9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:text="@string/price" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="5dp"
                            android:padding="4dp"
                            android:src="@drawable/edit64"
                            android:visibility="gone" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="10dp"
                            android:padding="1dp"
                            android:src="@drawable/ic_delete"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/category" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/tag" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/contact" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/website" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.github.siyamed.shapeimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:src="@drawable/prefences1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_shape_black"
                android:text="@string/go_back"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_shape_black"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>